kubernetes/zanata/05-01-deployment-zanatadb.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  # This name uniquely identifies the Deployment
  name: zanatadb
  namespace: ccc
spec:
  strategy:
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        # Label is used as selector in the service.
        k8s-app: zanata
        app: mariadb
        spec: zanatadb
    spec:
      containers:
        - name: zanatadb
          image: mariadb:10.1
