kubernetes/zanata/07-01-ingress-zamata.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zanata-ingress
  namespace: ccc
spec:
  rules:
  - host: zamata.clickyab.ae
    http:
      paths:
      - backend:
          serviceName: zanata-service
          servicePort: 9990
        path: /
