kubernetes/zanata/07-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zanata-ingress
  namespace: ccc
spec:
  rules:
  - host: zanata.clickyab.ae
    http:
      paths:
      - backend:
          serviceName: zanata-service
          servicePort: 8080
        path: /
